--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  carousel_slider: ^5.0.0
+  curved_navigation_bar: ^1.0.6
 
 dev_dependencies:
   flutter_test:
@@ -53,16 +55,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/facebook.png
-    - assets/images/google.png
-    - assets/images/linkedin.jpg
-    - assets/images/blood_logo.jpg
-    - assets/images/about_us.png
-    - assets/images/privacy_policy.png
-    - assets/images/login.png
-    - assets/images/forgot_pswd.png
-    - assets/images/otp.png
-    - assets/images/reset_pswd.png
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
