--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   carousel_slider: ^5.0.0
   curved_navigation_bar: ^1.0.6
+  intl: ^0.20.2
+
 
 dev_dependencies:
   flutter_test:
@@ -55,25 +57,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/images/blood_logo.jpg
-    - assets/images/login.png
-    - assets/images/facebook.png
-    - assets/images/google.png
-    - assets/images/linkedin.jpg
-    - assets/images/facebook.png
-    - assets/images/google.png
-    - assets/images/forgot_pswd.png
-    - assets/images/otp.png
-    - assets/images/reset_pswd.png
-    - assets/images/profile.jpg
-    - assets/images/about_us.png
-    - assets/images/privacy_policy.png
-    - assets/images/health_package.jpg
-    - assets/images/rewards.png
-    - assets/images/events_banner1.jpg
-    - assets/images/events_banner2.png
-    - assets/images/donation_event_1.jpg
-    - assets/images/donation_event_2.jpg
+    - assets/images/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
