--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -37,6 +38,8 @@ dependencies:
   carousel_slider: ^5.0.0
   curved_navigation_bar: ^1.0.6
   intl: ^0.20.2
+  firebase_core: ^3.12.1
+  cloud_firestore: ^5.6.5
 
 
 dev_dependencies:
