Implemented password reset email functionality and OTP verification via SMS for password update

--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,7 @@ migrate_working_dir/
 .pub/
 /build/
 android/app/google-services.json
+# lib/constants/app_credentials.dart
 
 # Symbolication related
 app.*.symbols
