--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,12 @@ dependencies:
   intl: ^0.20.2
   crypto: ^3.0.0
   file_picker: ^9.0.2
+  shared_preferences: ^2.5.2
   
   firebase_core: ^3.12.1
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.1
+  twilio_flutter: ^0.9.0
 
 
 dev_dependencies:
