--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   crypto: ^3.0.0
   file_picker: ^9.0.2
   shared_preferences: ^2.5.2
+  lottie: ^3.3.1
+  provider: ^6.1.2
   
   firebase_core: ^3.12.1
   cloud_firestore: ^5.6.5
@@ -35,6 +37,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/lottie/
   
   # fonts:
   #   - family: Schyler
