--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ migrate_working_dir/
 .pub/
 /build/
 android/app/google-services.json
-# lib/constants/app_credentials.dart
+lib/constants
 
 # Symbolication related
 app.*.symbols
