--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,16 +16,20 @@ dependencies:
   curved_navigation_bar: ^1.0.6
   intl: ^0.20.2
   crypto: ^3.0.0
-  supabase_flutter: ^2.8.4
   file_picker: ^9.0.2
   shared_preferences: ^2.5.2
   lottie: ^3.3.1
   provider: ^6.1.2
+  share_plus: ^7.2.1
+  path_provider: ^2.0.5
+  http: ^1.3.0
+  path: ^1.8.3
   
   firebase_core: ^3.12.1
   cloud_firestore: ^5.6.5
   firebase_auth: ^5.5.1
   twilio_flutter: ^0.9.0
+  supabase_flutter: ^2.8.4
 
 
 dev_dependencies:
